models improved - annotations changed, status added as separate model